# vsfieldkit

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  requirements.ci.txt  requirements.docs.txt  setup.cfg
docs/: changelog.rst  conf.py  index.rst  scan_interlaced_deep_dive.rst  usage.rst
docs/_static/css/: piccolo_overrides.css
vsfieldkit/: __init__.py  deinterlacing.py  interlacing.py  kernels.py  output.py  repair.py  sampling.py  scanning.py  types.py  util.py  vapoursynth.py
