[metadata]
name = vsfieldkit
version = attr: vsfieldkit.VERSION
author = Justin Turner Arthur
author_email = justinarthur@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JustinTArthur/vsfieldkit
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
license = MIT
license_files =
    LICENSE.txt

[options]
packages = vsfieldkit
python_requires = >=3.6

[options.package_data]
vsfieldkit = py.typed
